--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.main{
+    width: 100%;
+    min-height: 100vh;
+    background-color: #81ecec;
+}
