div with class name and cssapplied on it

--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
     box-sizing: border-box;
 }
 
-.main{
+#main{
     width: 100%;
     min-height: 100vh;
     background-color: #81ecec;
+    display: flex;
+    flex-wrap: wrap;
 }
