--- a/style.css
+++ b/style.css
@@ -32,3 +32,11 @@
     padding: 5px;
     cursor: pointer; 
 }
+
+.note textarea{
+    border: none;
+    width: 100%;
+    height: 100%;
+    resize: none;
+
+}
