--- a/style.css
+++ b/style.css
@@ -38,5 +38,11 @@
     width: 100%;
     height: 100%;
     resize: none;
+    padding: 10px;
+    font-size: 18px;
+}
 
+.note textarea:focus{
+    border: 0;
+    outline: 0;
 }
